MiLenguajeParser.py
# Generated from MiLenguaje.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiLenguajeParser ( Parser ):

    grammarFileName = "MiLenguaje.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'('", "')'", "'fct'", "':'", 
                     "'{'", "'}'", "','", "'if'", "'else'", "'for'", "'while'", 
                     "'clg'", "'$'", "'rtn'", "'scn'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'const'", "'final'", "'ent'", "'flt'", "'lg'", 
                     "'str'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "NUMERO_VALORES", 
                      "STRING", "WS", "COMMENT" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_declaracion = 2
    RULE_asignacion = 3
    RULE_expresion = 4
    RULE_termino = 5
    RULE_funcionConRetorno = 6
    RULE_funcionSinRetorno = 7
    RULE_parametros = 8
    RULE_llamadaFuncion = 9
    RULE_estructuraDeControl = 10
    RULE_estructuraIf = 11
    RULE_expresionLogica = 12
    RULE_cicloFor = 13
    RULE_asignacionFor = 14
    RULE_cicloWhile = 15
    RULE_tipo = 16
    RULE_kwClg = 17
    RULE_retornoSentencia = 18
    RULE_kwScn = 19
    RULE_operadoresAritmeticos = 20
    RULE_operadoresComparacion = 21
    RULE_kwUnmutable = 22
    RULE_kwEnt = 23
    RULE_kwFlt = 24
    RULE_kwLg = 25
    RULE_kwStr = 26

    ruleNames =  [ "programa", "sentencia", "declaracion", "asignacion", 
                   "expresion", "termino", "funcionConRetorno", "funcionSinRetorno", 
                   "parametros", "llamadaFuncion", "estructuraDeControl", 
                   "estructuraIf", "expresionLogica", "cicloFor", "asignacionFor", 
                   "cicloWhile", "tipo", "kwClg", "retornoSentencia", "kwScn", 
                   "operadoresAritmeticos", "operadoresComparacion", "kwUnmutable", 
                   "kwEnt", "kwFlt", "kwLg", "kwStr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    ID=35
    NUMERO_VALORES=36
    STRING=37
    WS=38
    COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiLenguajeParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = MiLenguajeParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 68182701088) != 0):
                self.state = 54
                self.sentencia()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(MiLenguajeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(MiLenguajeParser.DeclaracionContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(MiLenguajeParser.AsignacionContext,0)


        def estructuraDeControl(self):
            return self.getTypedRuleContext(MiLenguajeParser.EstructuraDeControlContext,0)


        def llamadaFuncion(self):
            return self.getTypedRuleContext(MiLenguajeParser.LlamadaFuncionContext,0)


        def kwClg(self):
            return self.getTypedRuleContext(MiLenguajeParser.KwClgContext,0)


        def funcionConRetorno(self):
            return self.getTypedRuleContext(MiLenguajeParser.FuncionConRetornoContext,0)


        def funcionSinRetorno(self):
            return self.getTypedRuleContext(MiLenguajeParser.FuncionSinRetornoContext,0)


        def retornoSentencia(self):
            return self.getTypedRuleContext(MiLenguajeParser.RetornoSentenciaContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = MiLenguajeParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        self._la = 0 # Token type
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.declaracion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.estructuraDeControl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.llamadaFuncion()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 66
                    self.match(MiLenguajeParser.T__0)


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.kwClg()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 70
                    self.match(MiLenguajeParser.T__0)


                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.funcionConRetorno()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 74
                self.funcionSinRetorno()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 75
                self.retornoSentencia()
                self.state = 76
                self.match(MiLenguajeParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MiLenguajeParser.TipoContext,0)


        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def kwUnmutable(self):
            return self.getTypedRuleContext(MiLenguajeParser.KwUnmutableContext,0)


        def expresion(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExpresionContext,0)


        def kwScn(self):
            return self.getTypedRuleContext(MiLenguajeParser.KwScnContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)




    def declaracion(self):

        localctx = MiLenguajeParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29 or _la==30:
                self.state = 80
                self.kwUnmutable()


            self.state = 83
            self.tipo()
            self.state = 84
            self.match(MiLenguajeParser.ID)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 85
                self.match(MiLenguajeParser.T__1)
                self.state = 88
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 35, 36, 37]:
                    self.state = 86
                    self.expresion()
                    pass
                elif token in [17]:
                    self.state = 87
                    self.kwScn()
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 92
            self.match(MiLenguajeParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExpresionContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = MiLenguajeParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(MiLenguajeParser.ID)
            self.state = 95
            self.match(MiLenguajeParser.T__1)
            self.state = 96
            self.expresion()
            self.state = 97
            self.match(MiLenguajeParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.TerminoContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.TerminoContext,i)


        def operadoresAritmeticos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.OperadoresAritmeticosContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.OperadoresAritmeticosContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = MiLenguajeParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expresion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.termino()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8126464) != 0):
                self.state = 100
                self.operadoresAritmeticos()
                self.state = 101
                self.termino()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def llamadaFuncion(self):
            return self.getTypedRuleContext(MiLenguajeParser.LlamadaFuncionContext,0)


        def expresion(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExpresionContext,0)


        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def NUMERO_VALORES(self):
            return self.getToken(MiLenguajeParser.NUMERO_VALORES, 0)

        def STRING(self):
            return self.getToken(MiLenguajeParser.STRING, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino" ):
                listener.enterTermino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino" ):
                listener.exitTermino(self)




    def termino(self):

        localctx = MiLenguajeParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_termino)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.llamadaFuncion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(MiLenguajeParser.T__2)
                self.state = 110
                self.expresion()
                self.state = 111
                self.match(MiLenguajeParser.T__3)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(MiLenguajeParser.ID)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(MiLenguajeParser.NUMERO_VALORES)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.match(MiLenguajeParser.STRING)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionConRetornoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def tipo(self):
            return self.getTypedRuleContext(MiLenguajeParser.TipoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(MiLenguajeParser.ParametrosContext,0)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_funcionConRetorno

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncionConRetorno" ):
                listener.enterFuncionConRetorno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncionConRetorno" ):
                listener.exitFuncionConRetorno(self)




    def funcionConRetorno(self):

        localctx = MiLenguajeParser.FuncionConRetornoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcionConRetorno)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(MiLenguajeParser.T__4)
            self.state = 119
            self.match(MiLenguajeParser.ID)
            self.state = 120
            self.match(MiLenguajeParser.T__2)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32212254720) != 0):
                self.state = 121
                self.parametros()


            self.state = 124
            self.match(MiLenguajeParser.T__3)
            self.state = 125
            self.match(MiLenguajeParser.T__5)
            self.state = 126
            self.tipo()
            self.state = 127
            self.match(MiLenguajeParser.T__6)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 68182701088) != 0):
                self.state = 128
                self.sentencia()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(MiLenguajeParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionSinRetornoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def parametros(self):
            return self.getTypedRuleContext(MiLenguajeParser.ParametrosContext,0)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_funcionSinRetorno

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncionSinRetorno" ):
                listener.enterFuncionSinRetorno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncionSinRetorno" ):
                listener.exitFuncionSinRetorno(self)




    def funcionSinRetorno(self):

        localctx = MiLenguajeParser.FuncionSinRetornoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcionSinRetorno)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(MiLenguajeParser.T__4)
            self.state = 137
            self.match(MiLenguajeParser.ID)
            self.state = 138
            self.match(MiLenguajeParser.T__2)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32212254720) != 0):
                self.state = 139
                self.parametros()


            self.state = 142
            self.match(MiLenguajeParser.T__3)
            self.state = 143
            self.match(MiLenguajeParser.T__6)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 68182701088) != 0):
                self.state = 144
                self.sentencia()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(MiLenguajeParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.TipoContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.TipoContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.ID)
            else:
                return self.getToken(MiLenguajeParser.ID, i)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = MiLenguajeParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.tipo()
            self.state = 153
            self.match(MiLenguajeParser.ID)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 154
                self.match(MiLenguajeParser.T__8)
                self.state = 155
                self.tipo()
                self.state = 156
                self.match(MiLenguajeParser.ID)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LlamadaFuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.ExpresionContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_llamadaFuncion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLlamadaFuncion" ):
                listener.enterLlamadaFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLlamadaFuncion" ):
                listener.exitLlamadaFuncion(self)




    def llamadaFuncion(self):

        localctx = MiLenguajeParser.LlamadaFuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_llamadaFuncion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(MiLenguajeParser.ID)
            self.state = 164
            self.match(MiLenguajeParser.T__2)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 240518168584) != 0):
                self.state = 165
                self.expresion()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==9:
                    self.state = 166
                    self.match(MiLenguajeParser.T__8)
                    self.state = 167
                    self.expresion()
                    self.state = 172
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 175
            self.match(MiLenguajeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstructuraDeControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estructuraIf(self):
            return self.getTypedRuleContext(MiLenguajeParser.EstructuraIfContext,0)


        def cicloFor(self):
            return self.getTypedRuleContext(MiLenguajeParser.CicloForContext,0)


        def cicloWhile(self):
            return self.getTypedRuleContext(MiLenguajeParser.CicloWhileContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_estructuraDeControl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstructuraDeControl" ):
                listener.enterEstructuraDeControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstructuraDeControl" ):
                listener.exitEstructuraDeControl(self)




    def estructuraDeControl(self):

        localctx = MiLenguajeParser.EstructuraDeControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_estructuraDeControl)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.estructuraIf()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.cicloFor()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 179
                self.cicloWhile()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstructuraIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresionLogica(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExpresionLogicaContext,0)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_estructuraIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstructuraIf" ):
                listener.enterEstructuraIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstructuraIf" ):
                listener.exitEstructuraIf(self)




    def estructuraIf(self):

        localctx = MiLenguajeParser.EstructuraIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_estructuraIf)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(MiLenguajeParser.T__9)
            self.state = 183
            self.match(MiLenguajeParser.T__2)
            self.state = 184
            self.expresionLogica()
            self.state = 185
            self.match(MiLenguajeParser.T__3)
            self.state = 186
            self.match(MiLenguajeParser.T__6)
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 68182701088) != 0):
                self.state = 187
                self.sentencia()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 193
            self.match(MiLenguajeParser.T__7)
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 194
                self.match(MiLenguajeParser.T__10)
                self.state = 195
                self.match(MiLenguajeParser.T__6)
                self.state = 199
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 68182701088) != 0):
                    self.state = 196
                    self.sentencia()
                    self.state = 201
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 202
                self.match(MiLenguajeParser.T__7)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionLogicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.ExpresionContext,i)


        def operadoresComparacion(self):
            return self.getTypedRuleContext(MiLenguajeParser.OperadoresComparacionContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_expresionLogica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresionLogica" ):
                listener.enterExpresionLogica(self)
